Added self-reflection components for Bassel

--- a/docs/VnVPlan/VnVPlan.tex
+++ b/docs/VnVPlan/VnVPlan.tex
@@ -1060,6 +1060,10 @@
 			\item Skill: \textbf{Static Testing}
 			\\ Rationale: Static testing will be a very important part of successfully completing the verification and validation plan for many reasons. Static testing involves matching the requirements to the code. It also involves looking into code error and structure. Having a good structure to the code will help with matching requirements stated in the SRS and validation plan resulting in a more sound product.
 			\\ Team member: William Lee
+			
+			\item Skill: \textbf{Functional Testing}
+			\\ Rationale: Functional testing is a crucial component in a verification and validation plan. Functional testing is used as a form of black-box testing to verify that the system's components provide the expected output, as per the requirements set forth in the software requirements specification.
+			\\ Team member: Bassel Rezkalla
 		\end{itemize}
 		\item For each of the knowledge areas and skills identified in the previous
 		question, what are at least two approaches to acquiring the knowledge or
@@ -1071,15 +1075,23 @@
 			\\ Approach 1: Research and contrast various static testing methods such as walkthroughs, code reviews and inspections.
 			\\ Approach 2: Refer to previous notes on Software Testing 3S03 at McMaster University regarding static testing methodology.
 			\\ Verdict: William will use approach 1 to research what methods are the best catered to this project because often tutorials for testing methods go in depth on strategy for approaching static testing. With approach 2, there is only a surface knowledge level of static testing learned from the course. However approach 2 can be used as a good starting point.
+			
+			\item Skill: \textbf{Functional Testing Knowledge}
+			\\Approach 1: Review and practice black-box testing and functional testing techniques from SWFRENG 3S03: Software Testing.
+			\\Approach 2: Examine the functional testing techniques used by other social applications that share similarities in feature functionality and requirements with our application.
+			\\Verdict: Bassel will use Approach 2 to learn about writing and implementing functional tests as it may provide information that is more relevant and specifically applicable to an application such as ours.
+			
+			\item Skill: \textbf{Dynamic Testing Knowledge}
+			\\Approach 1: Consult notes from previous courses that went over software testing (SFWRENG 3S03: Software Testing) and revisit the relevant course assignments.
+			\\ Approach 2: Utilize online resources to learn and improve dynamic testing skills and abilities.
+			\\ Verdict: Yuvraj will use Approach 1 to improve his Dynamic Testing knowledge. He has chosen this strategy because the course provided relevant and detailed notes from a reputable source with a lot of background information to aid in the learning.
+			
+			\item Skill: \textbf{Integration Testing Knowledge}
+			\\Approach 1: Review and practice integration testing from SWFRENG 3S03: Software Testing.
+			\\Approach 2: Read online articles on integration testing and consult integration tests in well known open source products.
+			\\Verdict: Jared will use Approach 2 to learn about integration testing since SFWRENG 3S03 did not cover it in sufficient detail to expand his skills.
 		\end{itemize}
-		\item Skill: \textbf{Dynamic Testing Knowledge}
-		Approach 1: Consult notes from previous courses that went over software testing (SFWRENG 3S03: Software Testing) and revisit the relevant course assignments.
-		Approach 2: Utilize online resources to learn and improve dynamic testing skills and abilities.
-		Verdict: Yuvraj will use Approach 1 to improve his Dynamic Testing knowledge. He has chosen this strategy because the course provided relevant and detailed notes from a reputable source with a lot of background information to aid in the learning.
-		\item Skill: \textbf{Integration Testing Knowledge}
-		Approach 1: Review and practice integration testing from SWFRENG 3S03: Software Testing.
-		Approach 2: Read online articles on integration testing and consult integration tests in well known open source products.
-		Verdict: Jared will use Approach 2 to learn about integration testing since SFWRENG 3S03 did not cover it in sufficient detail to expand his skills.
+
 	\end{enumerate}
 		
 	
