--- a/docs/VnVPlan/VnVPlan.tex
+++ b/docs/VnVPlan/VnVPlan.tex
@@ -1135,6 +1135,10 @@
 			\item Skill: \textbf{Functional Testing}
 			\\ Rationale: Functional testing is a crucial component in a verification and validation plan. Functional testing is used as a form of black-box testing to verify that the system's components provide the expected output, as per the requirements set forth in the software requirements specification.
 			\\ Team member: Bassel Rezkalla
+
+			\item Skill: \textbf{Integration Testing}
+			\\ Rationale: Integration testing is a quintessential process in any software application. Integration testing tests the interaction between components in a system as they are actually deployed.
+			\\ Team member: Jared Bentvelsen
 		\end{itemize}
 		\item For each of the knowledge areas and skills identified in the previous
 		question, what are at least two approaches to acquiring the knowledge or
