--- a/docs/VnVPlan/VnVPlan.tex
+++ b/docs/VnVPlan/VnVPlan.tex
@@ -1120,6 +1120,9 @@
 			\\ Rationale: Dynamic testing is vital to the verification and validation plan. Dynamic testing is executing test cases to determine and analyze how the system and variables that are not constant and change with time react.
 			\\ Team member: Yuvraj Randhawa
 
+			\item Skill: \textbf{Automated Load Testing}
+			\\ Rationale: Setting up automated tests to load/capacity test the mobile application is crucial in achieving verification and validation because it is needed for meeting capacity requirements.
+			\\ Team member: Matthew McCracken
 		\end{itemize}
 		\item For each of the knowledge areas and skills identified in the previous
 		question, what are at least two approaches to acquiring the knowledge or
@@ -1146,6 +1149,12 @@
 			\\Approach 1: Review and practice integration testing from SWFRENG 3S03: Software Testing.
 			\\Approach 2: Read online articles on integration testing and consult integration tests in well known open source products.
 			\\Verdict: Jared will use Approach 2 to learn about integration testing since SFWRENG 3S03 did not cover it in sufficient detail to expand his skills.
+
+			\item Skill: \textbf{Automated Load Testing Knowledge}
+			\\Approach 1: Consult former co workers who worked on mobile application load testing to gather best practices and tips.
+			\\Approach 2: Engage with online articles and forums that discuss using the specific load testing tools that we will use.
+			\\Verdict: Matthew will use Approach 2 to learn about load testing because this will give a broad range of knowledge to complete many different types of mobile tests.
+			
 		\end{itemize}
 
 	\end{enumerate}
