mention more stuff to please william

--- a/docs/VnVPlan/VnVPlan.tex
+++ b/docs/VnVPlan/VnVPlan.tex
@@ -1137,7 +1137,7 @@
 			\\ Team member: Bassel Rezkalla
 
 			\item Skill: \textbf{Integration Testing}
-			\\ Rationale: Integration testing is a quintessential process in any software application. Integration testing tests the interaction between components in a system as they are actually deployed.
+			\\ Rationale: Integration testing is a quintessential process in any software application. Integration testing tests the interaction between components in a system as they are actually deployed. These tests will be especially important for testing user requests and database transactions.
 			\\ Team member: Jared Bentvelsen
 		\end{itemize}
 		\item For each of the knowledge areas and skills identified in the previous
