--- a/docs/VnVPlan/VnVPlan.tex
+++ b/docs/VnVPlan/VnVPlan.tex
@@ -1115,6 +1115,11 @@
 			\item Skill: \textbf{Functional Testing}
 			\\ Rationale: Functional testing is a crucial component in a verification and validation plan. Functional testing is used as a form of black-box testing to verify that the system's components provide the expected output, as per the requirements set forth in the software requirements specification.
 			\\ Team member: Bassel Rezkalla
+
+			\item Skill: \textbf{Dynamic Testing}
+			\\ Rationale: Dynamic testing is vital to the verification and validation plan. Dynamic testing is executing test cases to determine and analyze how the system and variables that are not constant and change with time react.
+			\\ Team member: Yuvraj Randhawa
+
 		\end{itemize}
 		\item For each of the knowledge areas and skills identified in the previous
 		question, what are at least two approaches to acquiring the knowledge or
