--- a/docs/VnVPlan/VnVPlan.tex
+++ b/docs/VnVPlan/VnVPlan.tex
@@ -1151,7 +1151,7 @@
 			\\Verdict: Jared will use Approach 2 to learn about integration testing since SFWRENG 3S03 did not cover it in sufficient detail to expand his skills.
 
 			\item Skill: \textbf{Automated Load Testing Knowledge}
-			\\Approach 1: Consult former co workers who worked on mobile application load testing to gather best practices and tips.
+			\\Approach 1: Consult former co-workers who worked on mobile application load testing to gather best practices and tips.
 			\\Approach 2: Engage with online articles and forums that discuss using the specific load testing tools that we will use.
 			\\Verdict: Matthew will use Approach 2 to learn about load testing because this will give a broad range of knowledge to complete many different types of mobile tests.
 			
