--- a/docs/VnVPlan/VnVPlan.tex
+++ b/docs/VnVPlan/VnVPlan.tex
@@ -1116,6 +1116,10 @@
 			\\ Rationale: Functional testing is a crucial component in a verification and validation plan. Functional testing is used as a form of black-box testing to verify that the system's components provide the expected output, as per the requirements set forth in the software requirements specification.
 			\\ Team member: Bassel Rezkalla
 
+			\item Skill: \textbf{Integration Testing}
+			\\ Rationale: Integration testing is a quintessential process in any software application. Integration testing tests the interaction between components in a system as they are actually deployed. These tests will be especially important for testing user requests and database transactions.
+			\\ Team member: Jared Bentvelsen
+      
 			\item Skill: \textbf{Dynamic Testing}
 			\\ Rationale: Dynamic testing is vital to the verification and validation plan. Dynamic testing is executing test cases to determine and analyze how the system and variables that are not constant and change with time react.
 			\\ Team member: Yuvraj Randhawa
