Add Dimitri's reflection

--- a/docs/VnVPlan/VnVPlan.tex
+++ b/docs/VnVPlan/VnVPlan.tex
@@ -1127,6 +1127,10 @@
 			\item Skill: \textbf{Automated Load Testing}
 			\\ Rationale: Setting up automated tests to load/capacity test the mobile application is crucial in achieving verification and validation because it is needed for meeting capacity requirements.
 			\\ Team member: Matthew McCracken
+			
+			\item Skill: \textbf{UI/UX Testing}
+			\\ Rationale: UI/UX testing is a very overlooked aspect of testing. It ensures that the UI renders as intended, at the correct times, and with the correct data. Testing UI can help verify that all component states (pending, error, complete, etc.) are accounted for and function correctly.
+			\\ Team member: Dimitri Tsampiras
 		\end{itemize}
 		\item For each of the knowledge areas and skills identified in the previous
 		question, what are at least two approaches to acquiring the knowledge or
@@ -1158,6 +1162,11 @@
 			\\Approach 1: Consult former co-workers who worked on mobile application load testing to gather best practices and tips.
 			\\Approach 2: Engage with online articles and forums that discuss using the specific load testing tools that we will use.
 			\\Verdict: Matthew will use Approach 2 to learn about load testing because this will give a broad range of knowledge to complete many different types of mobile tests.
+			
+			\item Skill: \textbf{UI/UX Testing Knowledge}
+			\\Approach 1: Utilize user testing to determine if actual user experience is as intended. Tools such as surveys and questionaires can be used.
+			\\Approach 2: Use UI testing libraries learn how to verify and validate the system's UI components.
+			\\Verdict: Dimitri will use Approach 2 to ensure proper data and component states are being displayed correctly, and at correct times. 
 			
 		\end{itemize}
 
