--- a/docs/VnVPlan/VnVPlan.tex
+++ b/docs/VnVPlan/VnVPlan.tex
@@ -643,15 +643,15 @@
 		
 		\item{\textbf{test-UH-6}}: Use of Colour and Contrast.
 		
-		Type: Functional, Dynamic, Manual, Static etc.
+		Type: Manual
 		
-		Initial State: 
+		Initial State: Application is running.
 		
-		Input/Condition: 
+		Input/Condition: Users are shown images of various application views.
 		
-		Output/Result: 
+		Output/Result: The survey will give an indication of how visible application views are with respect to colour and contrast.
 		
-		How test will be performed: 
+		How test will be performed: Users will be shown images of various application views in a survey and asked to judge the visibility based on colour and contrast.
 		
 		Requirement(s): NFR7
 	\subsubsection{Performance Tests}
